deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app
  labels:
    app: ecommerce-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ecommerce-app
  template:
    metadata:
      labels:
        app: ecommerce-app
    spec:
      serviceAccountName: api-sa
      containers:
      - name: ecommerce-app
      # trigger deployment
        image: 159781650309.dkr.ecr.us-east-1.amazonaws.com/ecommerce-application:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: secrets-store
          mountPath: /tmp
          readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: ecommerce-aws-secrets
